Added my name to the project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <!--String used for output of poking button-->
     <string name="ouch">OUCH!</string>
     <string name="poked">Poke!</string>
+    <string name="sam">Samantha Rhodes</string>
 
 
 
